# pixel-tracking

./: .gitignore  README.md  pyproject.toml
templates/: index.html  trackpixel_list.html
track/: admin.py  models.py
track/migrations/: 0001_initial.py  0002_alter_trackpixel_detail.py
tracking/: settings.py  urls.py  views.py
