[tool.poetry]
name = "tracking"
version = "0.1.0"
description = ""
authors = ["arjansunar <arjan.gahatrajsunar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-ipware = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
